update html challenge

--- a/week4/HTML/html-exercise/index.html
+++ b/week4/HTML/html-exercise/index.html
@@ -1,17 +1,16 @@
+<!-- Your challenge is to reproduce the webpage shown in the ./template.png using html and css.
+    The image at the top of the page can be anything relating to the content you include in the text of the page. -->
+
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Exercise</title>
+        <link rel="stylesheet" type="text/css" media="screen" href="main.css">
+    </head>
+    <body>
 
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Exercise</title>
-
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css">
-</head>
-
-<body>
-
-</body>
-
+    </body>
 </html>
